Add editorconfig npm package

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.44.0"
   },
   "devDependencies": {
+    "editorconfig": "^2.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.1",
